@@ -1,5 +1,7 @@
 List of features / changes made / release notes, in reverse chronological order
 
+* fortran examples: avoided clash with keywords "type" and "null" (issues
+  #195-196, Jiri Kulda).
 * fixed modeord=1 failure for type 3 even though should never be used anyway
   (issue #194).
 * fixed spreadcheck NaN failure to detect bug introduced in 2.0.3 (9566511).
